--- a/resources/views/pages/register.edge
+++ b/resources/views/pages/register.edge
@@ -1,8 +1,8 @@
-@layouts.app('title', 'Login')
+@layouts.app('title', 'Register')
  <div class="timeline">
    @component('components/header')
    @endcomponent
-   @component('components/loginform')
+   @component('components/registerform')
    @endcomponent
 
  </div>
