--- a/resources/views/components/tweet.edge
+++ b/resources/views/components/tweet.edge
@@ -1,44 +1,45 @@
+
 <article class="tweet">
      <div class="tweet-avatar">
-            <img src="{{tweetAvatar}}" alt="tweet avatar"/>
+            {{--  <img src="{{image}}" alt="tweet avatar"/>  --}}
      </div>
      <div class="tweet-content">
          <div class="tweet-body">
            <div class="tweet-title">
-             <h2 class="tweet-title-author">{{ name }}</h2>
+             {{--  <h2 class="tweet-title-author">{{ name }}</h2>  --}}
              <div>
                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M17.75 9.41667C17.75 8.1 17.0208 6.95833 15.96 6.41667C16.0883 6.05417 16.1583 5.6625 16.1583 5.25C16.1583 3.40833 14.7333 1.91833 12.9767 1.91833C12.585 1.91833 12.21 1.98833 11.8633 2.12667C11.3483 1.0125 10.2583 0.25 9 0.25C7.74166 0.25 6.65333 1.01417 6.13583 2.125C5.78999 1.9875 5.41416 1.91667 5.02249 1.91667C3.26416 1.91667 1.84083 3.40833 1.84083 5.25C1.84083 5.66167 1.90999 6.05333 2.03833 6.41667C0.978327 6.95833 0.249161 8.09833 0.249161 9.41667C0.249161 10.6625 0.900828 11.7483 1.86749 12.3217C1.85083 12.4633 1.84083 12.605 1.84083 12.75C1.84083 14.5917 3.26416 16.0833 5.02249 16.0833C5.41416 16.0833 5.78916 16.0117 6.13499 15.875C6.65166 16.9867 7.73999 17.75 8.99916 17.75C10.2592 17.75 11.3475 16.9867 11.8633 15.875C12.2092 16.0108 12.5842 16.0817 12.9767 16.0817C14.735 16.0817 16.1583 14.59 16.1583 12.7483C16.1583 12.6033 16.1483 12.4617 16.1308 12.3208C17.0958 11.7483 17.75 10.6625 17.75 9.4175V9.41667ZM12.2367 6.63833L8.625 12.055C8.50416 12.2358 8.30666 12.3333 8.10416 12.3333C7.98499 12.3333 7.86416 12.3 7.75749 12.2283L7.66166 12.15L5.64916 10.1375C5.40499 9.89333 5.40499 9.4975 5.64916 9.25417C5.89333 9.01083 6.28916 9.00917 6.53249 9.25417L8.00749 10.7267L11.195 5.94333C11.3867 5.65583 11.775 5.58 12.0617 5.77083C12.35 5.9625 12.4283 6.35083 12.2367 6.6375V6.63833Z"  fill="#D9D9D9"/>
                 </svg>
              </div>
-             <p class="tweet-title-details">{{username}}</p>
+             <p class="tweet-title-details">{{tweet.userFullName}}</p>
              <p class="tweet-title-details">.</p>
-             <p class="tweet-title-details">{{date}}</p>
+             <p class="tweet-title-details">{{tweet.createdAt}}</p>
            </div>
             <p>
-              {{text}}
+              {{tweet.text}}
             </p>
-            <div class="tweet-image">
+            {{--  <div class="tweet-image">
                 @if(image)
                     <img src="{{image}}" alt="tweet image"/>
                 @endif
-            </div>
+            </div>  --}}
          </div>
          <div class="tweet-actions">
            <p class="tweet-action">
                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.705 0.868349L7.24834 0.860016H7.24667C3.60167 0.860016 0.746674 3.71585 0.746674 7.36168C0.746674 10.7767 3.40167 13.3667 6.96751 13.5033V16.6933C6.96751 16.7833 7.00417 16.9317 7.06751 17.0292C7.18584 17.2167 7.38751 17.3183 7.59417 17.3183C7.70917 17.3183 7.82501 17.2867 7.92917 17.22C8.14917 17.08 13.3233 13.77 14.6692 12.6317C16.2542 11.29 17.2025 9.32335 17.205 7.37168V7.35752C17.2 3.71835 14.3467 0.868349 10.705 0.867516V0.868349ZM13.8608 11.6783C12.9158 12.4783 9.80917 14.5159 8.21751 15.5475V12.8917C8.21751 12.5467 7.93834 12.2667 7.59251 12.2667H7.26251C4.21251 12.2667 1.99751 10.2034 1.99751 7.36168C1.99751 4.41668 4.30417 2.11002 7.24751 2.11002L10.7033 2.11835H10.705C13.6483 2.11835 15.955 4.42335 15.9567 7.36502C15.9542 8.95668 15.1717 10.5683 13.8617 11.6783H13.8608Z" fill="#6E767D"/>
                </svg>
-               @if(comments !== 0)
+               {{--  @if(comments !== 0)
                    <span>{{comments}}</span>
-               @endif
+               @endif  --}}
            </p>
             <p class="tweet-action">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19.8083 13.0583C19.565 12.8142 19.1692 12.8142 18.925 13.0583L17.075 14.9083V6.37499C17.075 4.65166 15.6725 3.24999 13.95 3.24999H9.07501C8.73001 3.24999 8.45001 3.52999 8.45001 3.87499C8.45001 4.21999 8.73001 4.49999 9.07501 4.49999H13.95C14.9833 4.49999 15.825 5.34166 15.825 6.37499V14.9083L13.975 13.0583C13.7308 12.8142 13.335 12.8142 13.0917 13.0583C12.8483 13.3025 12.8467 13.6983 13.0917 13.9417L16.0083 16.8583C16.1292 16.9808 16.2892 17.0417 16.45 17.0417C16.6108 17.0417 16.7692 16.9817 16.8917 16.8583L19.8083 13.9417C20.0533 13.6983 20.0533 13.3025 19.8083 13.0583ZM10.925 15.7917H6.05001C5.01667 15.7917 4.17501 14.95 4.17501 13.9167V5.38332L6.02501 7.23332C6.14834 7.35582 6.30834 7.41666 6.46834 7.41666C6.62834 7.41666 6.78834 7.35582 6.91001 7.23332C7.15417 6.98916 7.15417 6.59332 6.91001 6.34999L3.99334 3.43332C3.74917 3.18832 3.35334 3.18832 3.11001 3.43332L0.19334 6.34999C-0.0516599 6.59332 -0.0516599 6.98916 0.19334 7.23332C0.43834 7.47749 0.832507 7.47749 1.07667 7.23332L2.92667 5.38332V13.9167C2.92667 15.64 4.32917 17.0417 6.05167 17.0417H10.9267C11.2717 17.0417 11.5517 16.7617 11.5517 16.4167C11.5517 16.0717 11.2708 15.7917 10.9267 15.7917H10.925Z" fill="#6E767D"/>
                 </svg>
-                @if(retweets !== 0)
-                    <span>{{retweets}}</span>
+                @if(tweet.retweets !== 0)
+                    <span>{{tweet.retweets}}</span>
                 @endif
             </p>
 
@@ -46,8 +47,8 @@
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 18.0317H9.98834C7.83584 17.9917 1.62501 12.38 1.62501 7.06499C1.62501 4.51166 3.72917 2.26999 6.12751 2.26999C8.03584 2.26999 9.31918 3.58666 9.99918 4.54499C10.6775 3.58832 11.9608 2.26999 13.87 2.26999C16.27 2.26999 18.3733 4.51166 18.3733 7.06582C18.3733 12.3792 12.1617 17.9908 10.0092 18.03H10V18.0317ZM6.12834 3.52082C4.39501 3.52082 2.87584 5.17749 2.87584 7.06666C2.87584 11.85 8.73751 16.73 10.0008 16.7817C11.2658 16.73 17.1258 11.8508 17.1258 7.06666C17.1258 5.17749 15.6067 3.52082 13.8733 3.52082C11.7667 3.52082 10.59 5.96749 10.58 5.99166C10.3883 6.45999 9.61668 6.45999 9.42418 5.99166C9.41251 5.96666 8.23667 3.52082 6.12917 3.52082H6.12834Z" fill="#6E767D"/>
                 </svg>
-                @if(likes !== 0)
-                    <span>{{likes}}</span>
+                @if(tweet.likes !== 0)
+                    <span>{{tweet.likes}}</span>
                 @endif
             </p>
             <p class="tweet-action">
@@ -61,3 +62,5 @@
          </div>
      </div>
 </article>
+
+
