--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -5,11 +5,36 @@
    @component('components/tweetEditor')
    @endcomponent
 
-   @each(tweet in tweets)
-      @component('components/tweet', {...tweet})
+   @component('components/information')
+   @endcomponent
+<!-- Tabs -->
+<div class="tabs">
+  <p class="page-tab active" id="tab-all" onclick="showTab('all')">Pour vous</p>
+  <p class="page-tab" id="tab-following" onclick="showTab('following')">Abonnements</p>
+</div>
+
+<!-- Content for all tweets -->
+<div id="content-all" class="tab-content active">
+  @each(tweet in enrichedTweets)
+    @component('components/tweet', {tweet})
+    @endcomponent
+  @end
+</div>
+
+<!-- Content for following tweets -->
+<div id="content-following" class="tab-content">
+  @each(tweet in enrichedFollowingTweets)
+    @component('components/tweet', {tweet})
+    @endcomponent
+  @end
+</div>
+
+   {{--  @each(tweet in enrichedTweets)
+      @component('components/tweet', {tweet})
       @endcomponent
-   @end
+   @end  --}}
 
-
+   @component('components/footer')
+   @endcomponent
  </div>
 @end
