--- a/resources/views/components/layouts/app.edge
+++ b/resources/views/components/layouts/app.edge
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Home / x </title>
+  <title> Accueil / x </title>
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
