--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -1,20 +1,18 @@
 @layouts.app('title', 'Home')
  <div class="timeline">
+  <a href={{ route('profile.self', { id: auth.user ? auth.user.id : '' }) }}>Mon Profil</a>
    @component('components/header')
    @endcomponent
    @component('components/tweetEditor')
    @endcomponent
-
+{{--
    @component('components/information')
-   @endcomponent
-<!-- Tabs -->
-<div class="tabs">
-  <p class="page-tab active" id="tab-all" onclick="showTab('all')">Pour vous</p>
-  <p class="page-tab" id="tab-following" onclick="showTab('following')">Abonnements</p>
-</div>
+   @endcomponent  --}}
+
 
 <!-- Content for all tweets -->
 <div id="content-all" class="tab-content active">
+
   @each(tweet in enrichedTweets)
     @component('components/tweet', {tweet})
     @endcomponent
