--- a/resources/views/components/layouts/app.edge
+++ b/resources/views/components/layouts/app.edge
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title> Accueil / x </title>
+  <meta name="csrf-token" content="{{ csrfToken }}">
 
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 </head>
