--- a/resources/views/pages/login.edge
+++ b/resources/views/pages/login.edge
@@ -1,5 +1,5 @@
 @layouts.app('title', 'Login')
- <div class="timeline">
+ <div class="loginPage">
 
    @component('components/loginform')
    @endcomponent
