--- a/resources/views/components/tweetEditor.edge
+++ b/resources/views/components/tweetEditor.edge
@@ -4,13 +4,15 @@
        <img src="images/profile-photo.png" alt="avatar"/>
     </article>
 
-    <form class="tweet-editor-form">
+    <form class="tweet-editor-form" method="POST">
+
         <div>
-            <textarea class="tweet-editor-input" draggable="false" name="tweet" id='tweet' placeholder="What's happening?"></textarea>
+            <textarea class="tweet-editor-input" draggable="false" name="text" id='tweet' placeholder="What's happening?"></textarea>
+            <input type="file" name="tweet_image" id="fileInput" style="display : none;">
         </div>
         <div class="tweet-editor-buttons">
             <div class="tweet-editor-actions">
-                    <button>
+                    <label for="fileInput" id="uploadButton">
                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -20,7 +22,8 @@
                                     d="M6.39 7.20916C7.09968 7.20916 7.675 6.63385 7.675 5.92416C7.675 5.21447 7.09968 4.63916 6.39 4.63916C5.68031 4.63916 5.105 5.21447 5.105 5.92416C5.105 6.63385 5.68031 7.20916 6.39 7.20916Z"
                                     fill="#1D9BF0"/>
                         </svg>
-                    </button>
+
+                  </label>
                     <button>
                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -81,7 +84,7 @@
                     </button>
             </div>
             <div>
-                <button class="button">tweet</button>
+                <button class="button" id="btn-submit" type="submit">tweet</button>
             </div>
         </div>
     </form>
