Finish infinite scroll

--- a/resources/views/components/post_follow_list.edge
+++ b/resources/views/components/post_follow_list.edge
@@ -1,5 +1,5 @@
 {{-- resources/views/components/post_list.edge --}}
-@each(tweet in posts)
+@each(tweet in postsFollowing)
 
 <article class="tweet">
   <div class="tweet-avatar">
