--- a/resources/views/pages/index.edge
+++ b/resources/views/pages/index.edge
@@ -7,7 +7,7 @@
    @endcomponent
 
 
-<div id="content-all" class="scroller tab-content active" style="position: relative;">
+<div id="content-all" class="tab-content active" style="position: relative;">
   <div class="scroller_list">
     @component('components/post_list', { posts: enrichedTweets })
     @endcomponent
@@ -15,18 +15,18 @@
   <div class="scroller_buffer" style="position: absolute; bottom: 0; left:0; width: 100%; height: 50vh; pointer-events: none;"></div>
 </div>
 
- <div id="content-following" class="scroller tab-content" style="position: relative;">
+ <div id="content-following" class="tab-content" style="position: relative;">
   <div class="scroller_list">
-    @component('components/post_follow_list', { posts: enrichedFollowingTweets })
+    @component('components/post_follow_list', { postsFollowing: enrichedFollowingTweets })
     @endcomponent
   </div>
   <div class="scroller_buffer" style="position: absolute; bottom: 0; left:0; width: 100%; height: 50vh; pointer-events: none;"></div>
 </div>
  </div>
 
- <script>
+ {{--  <script>
   let currentPage = {{ page.currentPage }}
-</script>
+</script>  --}}
 
  @end
 
