--- a/resources/views/components/post_follow_list.edge
+++ b/resources/views/components/post_follow_list.edge
@@ -3,7 +3,7 @@
 
 <article class="tweet">
   <div class="tweet-avatar">
-         {{--  <img src="{{image}}" alt="tweet avatar"/>  --}}
+         <img src="images/profile-photo.png" alt="tweet avatar"/>
   </div>
   <div class="tweet-content">
       <div class="tweet-body">
