--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,12 +21,14 @@ body{
   height: 100%;
 }
 
+
+@media screen and (min-width : 768px) {
 #root{
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-
+}
 .timeline {
   flex: 0 0 700px;
   font-family: 'Inter', sans-serif;
@@ -73,7 +75,7 @@ body{
   align-items: flex-start;
   justify-content: flex-start;
   gap: 20px;
-  padding:  .3rem 1rem;
+  padding:  1rem 1rem;
   border-bottom: 1px solid #2F3336;
 }
 
@@ -133,16 +135,16 @@ body{
 }
 .tweet{
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 20px;
+  justify-content: space-around;
+  /* align-items: flex-start; */
+  gap: 5px;
   padding: 1.5rem 1rem;
   border-bottom: 1px solid #2F3336;
 }
 
 .tweet-avatar {
-  /*height: 70px;*/
-  /*width: 70px;*/
+  /* height: 70px;*/
+  /*width: 70px; */
   flex: 0 0 70px;
 }
 
@@ -158,6 +160,7 @@ body{
   justify-content: flex-start;
   gap: 30px;
   width: 100%;
+  padding: 0px;
 }
 .tweet-body{
   display: flex;
@@ -205,7 +208,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 5rem;
+  gap: 3rem;
   color: grey;
   font-size: 1rem;
 }
@@ -252,7 +255,7 @@ body{
 }
 
   /* margin: 400px; */
-  /* min-width: 700px; 
+  /* min-width: 700px;
 }
 */
 .login__logo{
@@ -260,7 +263,7 @@ body{
 }
 .login__form .title {
   margin-bottom: 20px;
-} 
+}
 .login__form .title h1{
   font-size: 4.5rem;
   line-height: normal !important;
